apps/bazarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: bazarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
  tls:
    secretName: bazarr-tls
